--- a/day 31/task7.html
+++ b/day 31/task7.html
@@ -1,58 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Fetch API Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .user {
-            background: #fff;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 6px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Login Page</title>
 </head>
 <body>
 
-<h1>User List</h1>
-<div id="users"></div>
+  <h2>Login</h2>
 
-<script>
-    // Public API URL
-    const apiUrl = "https://jsonplaceholder.typicode.com/users";
+  <input type="text" id="username" placeholder="Username"><br><br>
+  <input type="password" id="password" placeholder="Password"><br><br>
 
-    // Fetch data from API
-    fetch(apiUrl)
-        .then(response => response.json())
-        .then(data => {
-            const usersDiv = document.getElementById("users");
+  <button onclick="login()">Login</button>
 
-            data.forEach(user => {
-                const userDiv = document.createElement("div");
-                userDiv.className = "user";
+  <p id="msg"></p>
 
-                userDiv.innerHTML = `
-                    <h3>${user.name}</h3>
-                    <p><strong>Email:</strong> ${user.email}</p>
-                    <p><strong>City:</strong> ${user.address.city}</p>
-                `;
+  <script>
+    
+    if (localStorage.getItem("isLoggedIn") === "true") {
+      window.location.href = "dashboard.html";
+    }
 
-                usersDiv.appendChild(userDiv);
-            });
-        })
-        .catch(error => {
-            console.error("Error fetching data:", error);
-        });
-</script>
+    function login() {
+      let user = document.getElementById("username").value;
+      let pass = document.getElementById("password").value;
+
+      
+      if (user === "admin" && pass === "1234") {
+        localStorage.setItem("isLoggedIn", "true");
+        localStorage.setItem("username", user);
+        window.location.href = "dashboard.html";
+      } else {
+        document.getElementById("msg").innerText = "Invalid login!";
+      }
+    }
+  </script>
 
 </body>
 </html>
