--- a/day 43/practical.html
+++ b/day 43/practical.html
@@ -4,9 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box{
+            color: blue;
+            
+        }
+    </style>
 </head>
 <body>
-    <h1> 1. Draw a databse </h1>
+
+    <h2>1. Database Table Structure (Draw on Paper)</h2>
+  <p>You can draw the following table structure on paper:</p>
+
+  <table>
+    <tr>
+      <th>Student_ID</th>
+      <th>Name</th>
+      <th>Department</th>
+      <th>Marks</th>
+    </tr>
+    <tr>
+      <td>101</td>
+      <td>Aswitha</td>
+      <td>CSE</td>
+      <td>85</td>
+    </tr>
+    <tr>
+      <td>102</td>
+      <td>Ravi</td>
+      <td>ECE</td>
+      <td>78</td>
+    </tr>
+  </table>
+
+  <div class="box">
+    Rows → Records (horizontal) <br>
+    Columns → Fields (vertical)
+  </div>
+  <hr>
+  <hr>
+
+    <h1>2. Identify databases used in daily life</h1>
+    <p><strong>School/college Database</strong>
+    Stores student details, attendance , marks, and fees information.   
+    </p>
+    <p>Used by teachers and administrators for academic management</p>
+    <hr>
+    <hr>
+    <h1>3.Explain SQL workflow step by step</h1>
+    <p><ul>
+        <li>create database</li>
+        <li>create tables</li>
+        <li>Insert data</li>
+        <li>Retrieve data</li>
+        <li>update/delete data</li>
+    </ul></p>
+    <hr>
+    <hr>
+    <h1>4. Explain SQL workflow step by step</h1>
+    <table border="1" cellspacing="10" cellpadding="8">
+        <tr>
+            <th>features</th>
+            <th>file system</th>
+        </tr>
+        <tr>
+            <td>Definition</td>
+             <td>Stores data in files</td>
+        </tr>
+        <tr>
+            <td>Data organization</td>
+            <td>Unstructured or semi-structured</td>
+        </tr>
+        <tr>
+            <td>Data Redundancy</td>
+            <td>High (same data repeated in many file)</td>
+        </tr>
+        <tr>
+            <td>Data consistency</td>
+            <td>Hard to maintain</td>
+
+        </tr>
+        <tr>
+            <td>Data security</td>
+            <td>Limited security</td>
+        </tr>
+        <tr>
+            <td>Data access</td>
+            <td>Slow for large data</td>
+        </tr>
+    </table>
+    <p><strong>File system:</strong>
+    A school stores student data in multiple excel files</p>
+    <ul>
+        <li>Class1.xlsx</li>
+        <li>class2.xlsx</li>
+        <li>fees.xlsx</li>
+    </ul>
+
+    <p><strong>Database:</strong>
+    A school stores all student data in one database</p>
+    <ul>
+        <li>Student table</li>
+        <li>fees table</li>
+        <li>Marks table</li>
+    </ul>
+    <hr>
+    <hr>
     
+    <h2>5. Database Concept (1-Minute Explanation)</h2>                                                                                                                  
+  <p>
+    A database is an organized collection of data stored in tables.
+    It helps store large amounts of information securely and efficiently.
+    A DBMS is used to manage the database, and SQL is used to communicate
+    with it. Databases reduce data duplication, improve security, and
+    allow fast access to data. They are widely used in banking, education,
+    shopping apps, and social media.
+  </p>
+    <hr>
+    <hr>
 </body>
 </html>
