--- a/day 17/task6.html
+++ b/day 17/task6.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Javascript text display</h1>
+    <p id="JS">text changed</p>
     <script>
         document.getElementById("JS").innerText = "javascript is a programming language";
     </script>
